--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -15,6 +15,10 @@
         img {
             transform: scale(1.2);
         }
+
+        h1 {
+            text-decoration: underline;
+        }
     }
 
     &.-fade {
@@ -88,6 +92,7 @@
 
         &__author {
             @include font-size(20px);
+            text-transform: lowercase;
         }
     }
 
