AWE-24: Updating styles based on design feedback

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -8,6 +8,7 @@ $colors: (
         "fog": #DFEBEE,
         "white": #FFFFFF,
         "after-hours": #043544,
+        "black": #000000,
     ),
     "secondary": (
         "violet": #3D5CC2,
