--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -17,7 +17,9 @@
         }
 
         h1 {
-            text-decoration: underline;
+            box-shadow: 
+                inset 0 -0.15em get-color-primary("fresh"),
+                inset 0 -0.2em white;
         }
     }
 
@@ -66,8 +68,17 @@
         }
 
         h1 {
-            margin-bottom: 25px;
+            display: inline;
             max-width: 100%;
+            box-shadow:
+                inset 0 -0.15em get-color-primary("fresh"),
+                inset 0 -0.2em get-color-primary("fresh");
+            text-shadow:
+                5px 0 get-color-primary("fresh"),
+                0 5px get-color-primary("fresh"),
+                -5px 0 get-color-primary("fresh"),
+                0 -5px get-color-primary("fresh");
+            transition: box-shadow .25s ease;
 
             @include breakpoints("sm-tablet") {
                 @include font-size(32px);
@@ -92,6 +103,7 @@
 
         &__author {
             @include font-size(20px);
+            margin-top: 25px;
             text-transform: lowercase;
         }
     }
