--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -12,7 +12,9 @@
         }
 
         .m-blog-post__details p:first-of-type {
-            text-decoration: underline;
+            box-shadow: 
+                inset 0 -0.15em get-color-primary("white"),
+                inset 0 -0.2em get-color-primary("fresh");
         }
     }
 
@@ -73,12 +75,20 @@
         p:first-of-type {
             @include font-size(30px);
             @include line-height(36px);
-            display: inline-block;
+            display: inline;
             color: get-color-primary("fresh");
             margin-block-end: 0;
             margin-block-start: 0;
             text-transform: lowercase;
-            transition: all ease 0.5s;
+            transition: box-shadow .25s ease;
+            box-shadow:
+                inset 0 -0.15em get-color-primary("white"),
+                inset 0 -0.2em get-color-primary("white");
+            text-shadow:
+                5px 0 get-color-primary("white"),
+                0 5px get-color-primary("white"),
+                -5px 0 get-color-primary("white"),
+                0 -5px get-color-primary("white");
 
             @include breakpoints("laptop") {
                 @include font-size("medium-large");
