--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -16,8 +16,8 @@
             transform: scale(1.2);
         }
 
-        h1 {
-            box-shadow: 
+        h1 span {
+            box-shadow:
                 inset 0 -0.15em get-color-primary("fresh"),
                 inset 0 -0.2em white;
         }
@@ -68,21 +68,11 @@
         }
 
         h1 {
-            display: inline;
             max-width: 100%;
-            box-shadow:
-                inset 0 -0.15em get-color-primary("fresh"),
-                inset 0 -0.2em get-color-primary("fresh");
-            text-shadow:
-                5px 0 get-color-primary("fresh"),
-                0 5px get-color-primary("fresh"),
-                -5px 0 get-color-primary("fresh"),
-                0 -5px get-color-primary("fresh");
-            transition: box-shadow .25s ease;
 
             @include breakpoints("sm-tablet") {
                 @include font-size(32px);
-                @include line-height(40px);
+                @include line-height(36px);
                 max-width: 100%;
             }
 
@@ -98,6 +88,18 @@
 
             @include breakpoints(1680px) {
                 max-width: 800px;
+            }
+
+            span {
+                box-shadow:
+                    inset 0 -0.15em get-color-primary("fresh"),
+                    inset 0 -0.2em get-color-primary("fresh");
+                text-shadow:
+                    5px 0 get-color-primary("fresh"),
+                    0 5px get-color-primary("fresh"),
+                    -5px 0 get-color-primary("fresh"),
+                    0 -5px get-color-primary("fresh");
+                transition: box-shadow .25s ease;
             }
         }
 
