--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -11,7 +11,7 @@
             transform: scale(1.2);
         }
 
-        .m-blog-post__details h3 {
+        .m-blog-post__details h3 span {
             box-shadow:
                 inset 0 -0.15em get-color-primary("white"),
                 inset 0 -0.2em get-color-primary("fresh");
@@ -74,20 +74,10 @@
         h3 {
             @include font-size(30px);
             @include line-height(36px);
-            display: inline;
             color: get-color-primary("fresh");
             margin-block-end: 0;
             margin-block-start: 0;
             text-transform: lowercase;
-            transition: box-shadow .25s ease;
-            box-shadow:
-                inset 0 -0.15em get-color-primary("white"),
-                inset 0 -0.2em get-color-primary("white");
-            text-shadow:
-                5px 0 get-color-primary("white"),
-                0 5px get-color-primary("white"),
-                -5px 0 get-color-primary("white"),
-                0 -5px get-color-primary("white");
 
             @include breakpoints("sm-tablet") {
                 @include font-size(24px);
@@ -97,6 +87,18 @@
             @include breakpoints("laptop") {
                 @include font-size("medium-large");
                 @include line-height("large");
+            }
+
+            span {
+                box-shadow:
+                    inset 0 -0.15em get-color-primary("white"),
+                    inset 0 -0.2em get-color-primary("white");
+                text-shadow:
+                    5px 0 get-color-primary("white"),
+                    0 5px get-color-primary("white"),
+                    -5px 0 get-color-primary("white"),
+                    0 -5px get-color-primary("white");
+                transition: box-shadow .25s ease;
             }
         }
 
