AWE-24: Updating the black color to use the primary color settings

--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -119,7 +119,7 @@
         position: absolute;
         left: 0;
         top: 0;
-        background-color: #000;
+        background-color: get-color-primary("black");
         transition: all 1s ease;
 
         @include breakpoints("tablet") {
