AWE-24: Updating the featured area and making a few more design changes

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -13,7 +13,7 @@ $colors: (
     "secondary": (
         "violet": #3D5CC2,
         "pink": #F953A9,
-        "sriracha": #FB5C54,
+        "siracha": #FB5C54,
         "center-lane": #FCB43D,
     ),
     "tertiary": (
