AWE-19: Current progress on adding the menu / navigation of the website

--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -114,6 +114,11 @@
         @include breakpoints("tablet") {
             margin-top: 20px;
         }
+
+        svg rect {
+            @include font-size(32px);
+            fill: get-color-primary("fresh");
+        }
     }
 
     &__page-title {
