AWE-19: Adding the menu and updating animations and styles for mobile

--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -61,10 +61,11 @@
         h2 {
             @include font-size("base");
             margin-top: 10px;
+            color: get-color-neutral("light-blue");
+            font-family: $font-secondary;
             font-weight: 600;
             letter-spacing: 2px;
             text-transform: uppercase;
-            color: get-color-neutral("light-blue");
 
             @include breakpoints("sm-tablet") {
                 margin-top: 0;
