--- a/src/assets/scss/03_organism/_menu.scss
+++ b/src/assets/scss/03_organism/_menu.scss
@@ -27,13 +27,38 @@
         visibility: hidden;
         transition: opacity .6s cubic-bezier(.86,0,.07,1),visibility .6s cubic-bezier(.86,0,.07,1) 0s;
         will-change: opacity;
+
+        .o-rhythm__container.-fluid {
+            padding: 0;
+        }
+
+        &__logo {
+            display: block;
+            width: 50px;
+            position: fixed;
+            top: 50px;
+            perspective: 200px;
+            transition: opacity .4s cubic-bezier(.165,.84,.44,1);
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+
+            @include breakpoints("tablet") {
+                width: 60px;
+            }
+
+            svg {
+                path {
+                    fill: get-color-primary("fresh");
+                }
+            }
+        }
     }
 
     nav {
         height: 100%;
-        padding-left: 100px;
-        padding-top: 225px;
-        width: 430px;
+        padding-left: 50px;
+        padding-top: 150px;
+        width: 350px;
         position: fixed;
         right: 0;;
         top: 0;
@@ -44,6 +69,11 @@
         will-change: transform;
         box-shadow: 0px 3px 10px 0px rgba(0, 12, 13, 0.4);
 
+        @include breakpoints("sm-tablet") {
+            padding-left: 100px;
+            padding-top: 175px;
+            width: 430px;
+        }
 
         button {
             border: none;
@@ -57,6 +87,12 @@
             -webkit-appearance: none;
             font-family: $font-primary;
             cursor: pointer;
+            transition: transform .5s ease, opacity .5s ease;
+
+            &:hover {
+                transform: rotate(90deg);
+                opacity: 0.6;
+            }
 
             svg text {
                 fill: get-color-primary("white");
@@ -67,23 +103,30 @@
 
         a {
             @include font-size(50px);
-            @include line-height(99px);
+            @include line-height(80px);
             display: block;
             color: get-color-primary("white");
             font-family: $font-primary;
             text-transform: lowercase;
-
             transform: translateX(100%);
             opacity: 0;
             will-change: transform,opacity;
-            transition: opacity .6s cubic-bezier(.77,0,.175,1) 0.5s, transform .9s cubic-bezier(.77,0,.175,1) 0.5s;
+            transition: opacity .6s cubic-bezier(.77,0,.175,1) 0.25s, transform .9s cubic-bezier(.77,0,.175,1) 0.25s;
 
             &:nth-of-type(2) {
-                transition-delay: 0.75s, 0.75s;
+                transition-delay: 0.5s, 0.5s;
             }
 
             &:nth-of-type(3) {
-                transition-delay: 1s, 1s;
+                transition-delay: 0.75s, 0.75s;
+            }
+
+            &:hover {
+                opacity: 0.6;
+            }
+
+            @include breakpoints("sm-tablet") {
+                @include line-height(99px);
             }
         }
     }
