AWE-19: Updating the menu link to be a button instead of a link

--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -109,9 +109,17 @@
         float: right;
         margin-top: 20px;
 
-        svg rect {
-            @include font-size(32px);
-            fill: get-color-primary("fresh");
+        button {
+            border: none;
+            padding: 0;
+            background-color: transparent;
+            -webkit-appearance: none;
+            cursor: pointer;
+
+            svg rect {
+                @include font-size(32px);
+                fill: get-color-primary("fresh");
+            }
         }
     }
 
