AWE-25: Updating the copy for all blog posts based on the proofreading that was done.

--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -3,6 +3,10 @@ body {
     background-color: get-color-primary("white");
 }
 
+html.-menu-open {
+    overflow: hidden;
+}
+
 img {
     max-width: 100%;
     vertical-align: bottom;
