--- a/src/assets/scss/03_organism/_menu.scss
+++ b/src/assets/scss/03_organism/_menu.scss
@@ -22,7 +22,7 @@
         left: 0;
         top: 0;
         z-index: 20;
-        background-color: get-color-primary("fog");
+        background-color: get-color-primary("white");
         opacity: 0;
         visibility: hidden;
         transition: opacity .6s cubic-bezier(.86,0,.07,1),visibility .6s cubic-bezier(.86,0,.07,1) 0s;
@@ -81,8 +81,8 @@
             padding: 0;
             width: 30px;
             position: absolute;
-            right: 51px;
-            top: 91px;
+            right: 60px;
+            top: 68px;
             background-color: transparent;
             -webkit-appearance: none;
             font-family: $font-primary;
