Updating the styles for the iframe and removing the attributes for compliance; Adding the name field for the select so the label has a proper location

--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -71,6 +71,8 @@
         position: relative;
 
         iframe {
+            border: none;
+            height: 537px;
             width: 100%;
         }
     }
