--- a/src/assets/scss/03_organism/_slider.scss
+++ b/src/assets/scss/03_organism/_slider.scss
@@ -157,12 +157,13 @@
 }
 
 .pull-icon {
+    @include font-size(20px);
     display: block;
     position: absolute;
     right: 30px;
     top: 50%;
     transform: translateY(-50%);
-    background: get-color("secondary", "pink");
+    background: get-color-primary("fresh");
     border-radius: 50%;
     width: 90px;
     height: 90px;
@@ -170,7 +171,7 @@
     text-transform: uppercase;
     font-weight: 600;
     text-align: center;
-    line-height: 90px;
+    line-height: 80px;
     z-index: 9;
     pointer-events: none;
     animation-name: pull-indicator;
@@ -181,7 +182,7 @@
     span {
         position: relative;
         display: block;
-        top: -36px;
+        top: -28px;
         width: 30px;
         height: 2px;
         margin: 10px auto;
