--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -8,6 +8,7 @@ $colors: (
         "fog": #DFEBEE,
         "white": #FFFFFF,
         "after-hours": #043544,
+        "after-hours-light": #3E4E53,
         "black": #000000,
     ),
     "secondary": (
