--- a/src/assets/scss/01_atom/_buttons.scss
+++ b/src/assets/scss/01_atom/_buttons.scss
@@ -1,11 +1,13 @@
 .a-button {
-    @include font-size("smallest");
+    @include font-size("base");
     color: get-color("primary", "white");
     font-family: $font-secondary;
     border: none;
     border-bottom: 1px solid get-color("primary", "fresh");
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 600;
+    letter-spacing: 0.2em;
+    padding-bottom: 0.2em;
     background: transparent;
 
     &.-large {
