--- a/src/assets/scss/02_molecule/_case-study-collage.scss
+++ b/src/assets/scss/02_molecule/_case-study-collage.scss
@@ -24,14 +24,14 @@
     }
 
     p:nth-child(2) {
-        @include font-size(16px);
-        @include line-height(20px);
+        @include font-size(24px);
+        line-height: 2rem;
         padding-top: 20px;
         color: get-color-primary("fresh");
 
         @include breakpoints("laptop") {
             padding-left: 25%;
-            width: 275px;
+            width: 455px;
         }
     }
 
@@ -40,7 +40,7 @@
 
         @include breakpoints("laptop") {
             padding-left: 50%;
-            top: -200px;
+            top: -225px;
         }
     }
 }
